--- a/plugin.yml
+++ b/plugin.yml
@@ -4,4 +4,4 @@ version: 1.0.0
 api: 4.0.0
 author: KohakuChanX
 description: "The AdvanceJoin Config Plugins for Minecraft Servers"
-website: "plugin.mindzplayz.ga"
+website: "plugin.nayukihub.tk"
